tests/pass/mostra_interpolation.kl
// mostra with {} string interpolation.
fn inisiu() {
    nter  n = 10;
    num   x = 2.5;
    bool  b = sin;
    mostran("n = {}", n);
    mostran("x = {}", x);
    mostran("b = {}", b);
    mostran("n={} x={} b={}", n, x, b);
}
