tests/fail/fail_uninitialized_variable.kl
fn inisiu() {
    nter x;
    mostra(x);
}
